--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
     <div id="game-container">
         <div id="story"></div>
         <div id="choices"></div>
+        <div id="reflection" style="display: none;">
+            <h3>Reflection Task</h3>
+            <textarea id="reflectionText" rows="10" cols="50" placeholder="Write your reflection here..."></textarea>
+            <button id="saveReflection">Save Reflection</button>
+        </div>
+        <div id="summary" style="display: none;">
+            <h3>Your Life Summary</h3>
+            <p id="summaryText"></p>
+            <button id="downloadSummary">Download Summary</button>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
